@@ -143,6 +143,8 @@ static PyObject* Object_GetOwner(Crossfire_Object* whoptr, void* closure);
 static PyObject* Object_GetEnemy(Crossfire_Object* whoptr, void* closure);
 static PyObject* Object_GetCount(Crossfire_Object* whoptr, void* closure);
 static PyObject* Object_GetGodGiven(Crossfire_Object* whoptr, void* closure);
+static PyObject* Object_GetIsPet(Crossfire_Object* whoptr, void* closure);
+static PyObject* Object_GetAttackMovement(Crossfire_Object* whoptr, void* closure);
 
 static int Object_SetMessage(Crossfire_Object* whoptr, PyObject* value, void* closure);
 static int Object_SetName(Crossfire_Object* whoptr, PyObject* value, void* closure);
@@ -216,6 +218,8 @@ static int Object_SetNoSave(Crossfire_Object* whoptr, PyObject* value, void* clo
 static int Object_SetOwner(Crossfire_Object* whoptr, PyObject* value, void* closure);
 static int Object_SetEnemy(Crossfire_Object* whoptr, PyObject* value, void* closure);
 static int Object_SetGodGiven(Crossfire_Object* whoptr, PyObject* value, void* closure);
+static int Object_SetIsPet(Crossfire_Object* whoptr, PyObject* value, void* closure);
+static int Object_SetAttackMovement(Crossfire_Object* whoptr, PyObject* value, void* closure);
 
 static PyObject* Crossfire_Object_Remove( Crossfire_Object* who, PyObject* args );
 static PyObject* Crossfire_Object_Apply( Crossfire_Object* who, PyObject* args );
@@ -375,6 +379,8 @@ static PyGetSetDef Object_getseters[] = {
     { "Enemy",          (getter)Object_GetEnemy,        (setter)Object_SetEnemy, NULL, NULL },
     { "Count",          (getter)Object_GetCount,        NULL, NULL, NULL },
     { "GodGiven",       (getter)Object_GetGodGiven,     (setter)Object_SetGodGiven, NULL, NULL },
+    { "IsPet",          (getter)Object_GetIsPet,     (setter)Object_SetIsPet, NULL, NULL },
+    { "AttackMovement", (getter)Object_GetAttackMovement, (setter)Object_SetAttackMovement, NULL, NULL },
     { NULL, NULL, NULL, NULL, NULL }
 };
 
